tests/fixtures/errors/compare_resultval.z
# E0100: ordering comparisons have no structural fallback. A lossy conversion
# yields a resultval, which declares no '<' -- comparing it is a type error,
# not invalid C. Unwrap first (big.u32.orPanic < 5).
main: function is {
    big: 999.u64
    if (big.u32) < 5 then print "x"
}
